Fix: Set fix spacing between entry navs

--- a/tutangle-responsive/css/reset.css
+++ b/tutangle-responsive/css/reset.css
@@ -3,11 +3,12 @@
   padding: 0;
 }
 
-html, body{
+html,
+body {
   overflow-x: hidden;
 }
 
-body{
+body {
   position: relative;
 }
 .left {
