--- a/tutangle-responsive/css/style.css
+++ b/tutangle-responsive/css/style.css
@@ -125,6 +125,7 @@ a:hover {
 
 .entries-nav {
   padding-left: 8px;
+  margin-left: 8px;
   padding-top: 10px;
   margin-top: 3px;
 }
